--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -28,6 +28,11 @@ header {
             &.active {
                 background-color: $primary-color!important;
                 }
+
+            i {
+                position: relative;
+                top: 1px;
+            }
         }
 
         &:first-child .nav-link {
