--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,11 +8,16 @@ body {
     color: $text-color;
 }
 
+h4 {
+    font-size: 2rem;
+}
+
 .g-basic-card {
     background-color: white;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
+    padding: 4rem;
 
-    .titulo-section {
+    .title-section {
         font-weight: normal;
         font-size: 3rem;
     }
@@ -20,4 +25,119 @@ body {
 
 .g-btn {
     @include crearBoton(#ffffff,$primary-color);
+}
+
+.grid-layout {
+    .show-value {
+        font-size: 4.5rem;
+
+    }
+
+    label {
+        font-weight: 600;
+        font-size: 2rem;
+    }
+}
+
+.g-action-button-panel {
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        background-color: #e2e2e2;
+        border-radius: 1rem;
+
+        li {
+            display: inline-block;
+            margin: 0;
+
+            a {
+                font-size: 2rem;
+                border: none;
+                border-radius: 0;
+                color: $text-color;
+                padding: 0.8rem 2.5rem 0.8rem 2.5rem;
+                margin: 0 -2px;
+
+                &:hover {
+                    background-color: $primary-color;
+                    color: #fff;
+                }
+
+                &.active {
+                    background-color: $primary-color;
+                    color: #fff;
+                }
+
+                i {
+                    position: relative;
+                    top: 1px;
+                    margin-left: 1rem;
+                }
+            }
+
+            &:first-child a {
+                border-radius: 1rem 0 0 1rem;
+            }
+
+            &:last-child a {
+                border-radius: 0 1rem 1rem 0;
+            }
+        }
+    }
+}
+
+
+form {
+    input[type="text"], input[type="time"], select {
+        border-radius: 0.5rem;
+        border: 1px solid $border-color;
+        padding: 1rem 1rem;
+        width: 100%;
+        background-color: white;
+    }
+
+    label {
+        margin-left: 0.5rem;
+    }
+
+    .row {
+        margin-top: 2rem;
+
+        > div {
+            margin-bottom: 2rem;
+        }
+    }
+
+    .button-panel {
+        display: flex;
+        justify-content: end;
+    }
+}
+
+.g-administration-item-layout {
+    .container-table {
+        border-radius: 1rem;
+        border: 1px solid $border-color;
+        padding: 0;
+        
+        table tr td {
+            padding: 0.6rem 2rem;
+        }
+    }
+
+    .title-section {
+        padding-left: 1rem;
+    }
+
+    form {
+        margin-top: 3rem;
+        padding-left: 1rem;
+        min-height: 36rem;
+
+        .input-eta input {
+            width: 10rem;
+            margin-right: 0.8rem;
+        }
+    }
 }
