--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,5 @@
 @import 'base/base';
 @import 'components/header';
 @import 'components/grid-layout';
-@import 'components/boletos';
-@import 'components/resumen';
+@import 'components/tickets';
 @import 'components/icons';
