--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ header {
 
 @font-face {
   font-family: 'bustickets_v1';
-  src: url("/fonts/bustickets_v1.ttf?cxzsmg") format("truetype"), url("/fonts/bustickets_v1.woff?cxzsmg") format("woff"), url("/fonts/bustickets_v1.svg?cxzsmg#bustickets_v1") format("svg");
+  src: url("../fonts/bustickets_v1.ttf?cxzsmg") format("truetype"), url("../fonts/bustickets_v1.woff?cxzsmg") format("woff"), url("../fonts/bustickets_v1.svg?cxzsmg#bustickets_v1") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
