--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'bustickets_v1';
   src:
-    url('/fonts/bustickets_v1.ttf?cxzsmg') format('truetype'),
-    url('/fonts/bustickets_v1.woff?cxzsmg') format('woff'),
-    url('/fonts/bustickets_v1.svg?cxzsmg#bustickets_v1') format('svg');
+    url('../fonts/bustickets_v1.ttf?cxzsmg') format('truetype'),
+    url('../fonts/bustickets_v1.woff?cxzsmg') format('woff'),
+    url('../fonts/bustickets_v1.svg?cxzsmg#bustickets_v1') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
