Evento que permite crear un nuevo elemento completo, funcionalidad de editar elementos en proceso

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,9 @@ form .button-panel {
   display: flex;
   justify-content: end; }
 
+form input:disabled {
+  border-color: #eaeaea !important; }
+
 .g-administration-item-layout .container-table {
   border-radius: 1rem;
   border: 1px solid #c4c4c4;
