Correcion del funcionamiento de la funcion crear tablas

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -124,6 +124,7 @@ form {
         border-radius: 1rem;
         border: 1px solid $border-color;
         padding: 0;
+        overflow: hidden;
         
         table tr td {
             padding: 0.6rem 2rem;
