--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,8 @@ form input:disabled {
 .g-administration-item-layout .container-table {
   border-radius: 1rem;
   border: 1px solid #c4c4c4;
-  padding: 0; }
+  padding: 0;
+  overflow: hidden; }
   .g-administration-item-layout .container-table table tr td {
     padding: 0.6rem 2rem; }
   .g-administration-item-layout .container-table table td.active {
