--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -27,72 +27,69 @@
 .icon-pencil:before {
   content: "\e905";
 }
+.icon-image:before {
+  content: "\e90d";
+}
 .icon-file-text2:before {
   content: "\e926";
-}
-.icon-price-tags:before {
-  content: "\e936";
-}
-.icon-qrcode:before {
-  content: "\e938";
 }
 .icon-ticket:before {
   content: "\e939";
 }
-.icon-phone:before {
-  content: "\e942";
+.icon-coin-dollar:before {
+  content: "\e93b";
+}
+.icon-location:before {
+  content: "\e947";
 }
 .icon-location2:before {
   content: "\e948";
 }
+.icon-compass2:before {
+  content: "\e94a";
+}
 .icon-map2:before {
   content: "\e94c";
+}
+.icon-clock:before {
+  content: "\e94e";
 }
 .icon-calendar:before {
   content: "\e953";
 }
-.icon-printer:before {
-  content: "\e954";
-}
 .icon-floppy-disk:before {
   content: "\e962";
 }
-.icon-equalizer:before {
-  content: "\e992";
+.icon-user:before {
+  content: "\e971";
 }
 .icon-equalizer2:before {
   content: "\e993";
 }
-.icon-cog:before {
-  content: "\e994";
-}
 .icon-stats-bars:before {
   content: "\e99c";
 }
-.icon-bin:before {
-  content: "\e9ac";
+.icon-warning:before {
+  content: "\ea07";
 }
-.icon-list-numbered:before {
-  content: "\e9b9";
+.icon-notification:before {
+  content: "\ea08";
 }
-.icon-list:before {
-  content: "\e9ba";
+.icon-info:before {
+  content: "\ea0c";
 }
-.icon-list2:before {
-  content: "\e9bb";
+.icon-blocked:before {
+  content: "\ea0e";
 }
-.icon-menu:before {
-  content: "\e9bd";
+.icon-checkmark:before {
+  content: "\ea10";
 }
-.icon-menu2:before {
-  content: "\e9be";
+.icon-checkmark2:before {
+  content: "\ea11";
 }
-.icon-menu3:before {
-  content: "\e9bf";
+.icon-circle-right:before {
+  content: "\ea42";
 }
-.icon-menu4:before {
-  content: "\e9c0";
-}
-.icon-earth:before {
-  content: "\e9ca";
+.icon-circle-left:before {
+  content: "\ea44";
 }
