--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,9 @@
 $primary-color: #39B8FF;
 $text-color: #2c1c1c;
 $border-color: #c4c4c4;
+$green-color: #17D7A0;
+$yellow-color: #FFE162;
+$red-color: #E60965;
 $md-small: 576px;
 $md-medium: 768px;
 $md-large: 992px;
