--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ h4 {
     .g-action-button-panel ul li:last-child a {
       border-radius: 0 1rem 1rem 0; }
 
-form input[type="text"], form input[type="time"], form select {
+form input[type="text"], form input[type="time"], form input[type="date"], form select {
   border-radius: 0.5rem;
   border: 1px solid #c4c4c4;
   padding: 1rem 1rem;
