--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -89,7 +89,7 @@ h4 {
 
 
 form {
-    input[type="text"], input[type="time"], select {
+    input[type="text"], input[type="time"], input[type="date"], select {
         border-radius: 0.5rem;
         border: 1px solid $border-color;
         padding: 1rem 1rem;
