--- a/scss/components/_grid-layout.scss
+++ b/scss/components/_grid-layout.scss
@@ -19,7 +19,7 @@
             grid-gap: 2rem;
             grid-template-areas: 
                 "tickets resume"
-                "tickets occupancy"
+                "tickets sells"
                 "tickets sells";
         }
     }
