--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,6 +12,13 @@ h4 {
     font-size: 2rem;
 }
 
+.g-show-ticket {
+    border: none;
+    background-color: $primary-color;
+    color: #ffffff;
+    border-radius: 0.5rem;
+}
+
 .g-basic-card {
     background-color: white;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.18);
@@ -205,5 +212,15 @@ form {
     .error {
         color: $red-color;
         border: 2px solid $red-color;
+    }
+}
+
+#modalTicketLabel {
+    font-size: 2.5rem;
+}
+
+.modal-footer {
+    button {
+    font-size: 2rem;
     }
 }
