--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -10,6 +10,7 @@
     position: relative;
     top: 0;
     display: inline-block;
+    text-decoration: none;
 }
 
 @mixin crearBoton($colorTexto,$colorBase) {
