--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -69,6 +69,9 @@
 .icon-stats-bars:before {
   content: "\e99c";
 }
+.icon-bin2:before {
+  content: "\e9ad";
+}
 .icon-warning:before {
   content: "\ea07";
 }
