--- a/scss/components/_tickets.scss
+++ b/scss/components/_tickets.scss
@@ -41,4 +41,9 @@
             }
         }
     }
+
+    .table-ticket-wrap  {
+        max-height: 43.75rem;
+        overflow-y: scroll;
+    }
 }
