--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -34,6 +34,10 @@ h4 {
     @include crearBoton(#ffffff,$primary-color);
 }
 
+.g-btn-red {
+    @include crearBoton(#ffffff,$red-color);
+}
+
 .grid-layout {
     .show-value {
         font-size: 4.5rem;
