--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -22,6 +22,7 @@
     box-shadow: 0px 6px 0px darken($colorBase, 15%);
 
     &:hover {
+        color: $colorTexto;
         background-color: lighten($colorBase, $amount: 10%);
         box-shadow: 0px 6px 0px lighten(darken($colorBase, 15%), 5%);
     }
